# aubeshim

./: .gitignore  AGENTS.md  Cargo.toml  ISSUES.md  README.md  aube-lock.yaml  install.sh  lefthook.yaml  package.json  rust-toolchain.toml
.github/workflows/: ci.yml  publish.yml
src/: cli.rs  config.rs  globals.rs  lib.rs  main.rs  planner.rs  runtime.rs  shell.rs  shims.rs
src/planner/: bun.rs  dlx.rs  npm.rs  pnpm.rs  yarn.rs
