[package]
name = "aubeshim"
version = "0.8.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Michael Olson <c@mwolson.org>"]
description = "Replace all {bun, npm, pnpm, yarn} with aube"
repository = "https://github.com/mwolson/aubeshim"
readme = "README.md"
keywords = ["aube", "bun", "npm", "pnpm", "shim"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "aubeshim"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
